# code_analyzer

./: .gitignore  Cargo.toml  GLOSSARY.md  Makefile  README.md  WORKSPACE.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/: CODEOWNERS
apps/cli/: Cargo.toml  README.md  package.json
apps/cli/src/: main.rs
apps/lsp/: Cargo.toml  README.md  package.json
apps/lsp/src/: main.rs
designs/: architecture.md
docs/: next.config.js  package.json  theme.config.jsx  turbo.json
docs/designs/: architecture.md
docs/pages/: _app.js  class_diagram.css  index.mdx
docs/pages/designs/: architecture.md  architecture.mdx  ast.mdx
src/: language.rs  main.rs
