[workspace]
members = ["apps/lsp", "apps/cli", "packages/core/common", "packages/core/analyzer_interface", "packages/core/parser_interface", "packages/core/parsers/example","packages/core/analyzer_loader", "packages/core/parsers/markdown", "packages/core/tree_sitter_interface", "packages/core/kernel"] 
resolver = "2"
